Fix stretched project image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1711,6 +1711,7 @@ header>p {
 .image.fit {
 	display: block;
 	width: 100%;
+	max-width: 355px;
 }
 
 .image.featured {
